# JSME_ipywidget

./: .coveragerc  .gitignore  Demo_draw.ipynb  Demo_mol.ipynb  Demo_smiles.ipynb  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  jsme_ipywidget.json  original_url.txt  package.json  pyproject.toml  smiles_draw.ipynb  webpack.config.js
jsmewidget/: __init__.py  _frontend.py  _version.py  smileseditor.py
jsmewidget/nbextension/: extension.js
jsmewidget/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
src/__tests__/: index.spec.ts
src/jsme/: 0ADE505A5718D4BE2E0EE1B7C54CC163.cache.js  4277561D0E87B89F4DFCCC3A712D5B19.cache.js  96E40B969193BD74B8A621486920E79C.cache.js  jsme.devmode.js  jsme.nocache.d.ts  jsme.nocache.js
